Restructured the CertificateLoggingUtils class and enhanced CategorizeCertsWebFilterTest and CategorizeCertsFilterTest by adding logging assertions into existing tests
Signed-off-by: hrishikesh-nalawade <hrishikesh.nalawade.17@gmail.com>